Fix z-index in section

--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -69,9 +69,7 @@ header, footer  {
     left: 0;
     width: 100%;
     display: block;
-    z-index: 1;
-
-    overflow: hidden;
+    z-index: 2;
 }
 
 header {
